# python-mentorship-exercises-03

./: .gitignore  main.py  pyproject.toml
shared/: text.py
slides/: e01_sum_interval.py  e02_input_validation.py
slides/basics/: e01_sum_interval.py  e02_input_validation.py  e03_matrix_filtering.py  e04_atm_simulation.py
